--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -75,6 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Adds Icon for YouthMatchID
 foxtrick.ForumYouthIcons.youth_series.desc=Adds Icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textboxes for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds Icon for Forum 'pre' format
+foxtrick.ForumYouthIcons.table.desc=Adds Icon for Forum 'table' format
 foxtrick.ShowMessageButton.desc=Adds a 'Send Message' button to the manager page
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
@@ -460,6 +461,7 @@ ForumSpecialBBCode.article=Add articleID
 ForumSpecialBBCode.clock=Add actual time
 ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
+ForumSpecialBBCode.table=Insert 'table' format tags (spaces seperate cells, newlines seperate rows)
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
