ForumThreadAutoIgnore.js: forgot to commit my descs
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5205 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -365,6 +365,10 @@ foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Copy in HT-ML quoted style
 foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
 foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
 foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
+foxtrick.ForumThreadAutoIgnore.desc=Autoignore of forum topics with selected tags (topics with [ATag] or {ATag}). Not case sensitive.
+foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata seperated tags, eg: NT, idea, Bug. 
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by thread ids (the part before the dot) which will not be autoignored. Commata seperated. 
+
 # -----------------------------------------------------------------------------
 
 
