table tag: made separator selectable
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5211 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -19,7 +19,7 @@ foxtrick.MoveLinks.desc=Moves the manager's series and flag links to the message
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
-foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. set pieces)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment (also plays sound on ticker events)
@@ -363,8 +363,8 @@ foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start 
 foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
 foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
 foxtrick.ForumThreadAutoIgnore.desc=Autoignore of forum topics with selected tags (topics with [ATag] or {ATag}). Not case sensitive.
-foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata seperated tags, eg: NT, idea, Bug. 
-foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by thread ids (the part before the dot) which will not be autoignored. Commata seperated. 
+foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata separated tags, eg: NT, idea, Bug. 
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by thread ids (the part before the dot) which will not be autoignored. Commata separated. 
 
 # -----------------------------------------------------------------------------
 
@@ -465,7 +465,8 @@ ForumSpecialBBCode.article=Add articleID
 ForumSpecialBBCode.clock=Add actual time
 ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
-ForumSpecialBBCode.table=Insert 'table' format tags (spaces seperate cells, newlines seperate rows)
+ForumSpecialBBCode.table=Insert 'table' format tags. Rows are separeted by newlines. Columns are currently separated by:
+ForumSpecialBBCode.tableSeparator=Separate by:
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
