foxtrick.properties: some description changes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5217 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -362,9 +362,9 @@ foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Copy in HT-ML quoted style
 foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
 foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
 foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
-foxtrick.ForumThreadAutoIgnore.desc=Autoignore of forum topics with selected tags (topics with [ATag] or {ATag}). Not case sensitive.
-foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata separated tags, eg: NT, idea, Bug. 
-foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by thread ids (the part before the dot) which will not be autoignored. Commata separated. 
+foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive. 
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 
 # -----------------------------------------------------------------------------
 
@@ -465,8 +465,8 @@ ForumSpecialBBCode.article=Add articleID
 ForumSpecialBBCode.clock=Add actual time
 ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
-ForumSpecialBBCode.table=Insert 'table' format tags. Rows are separeted by newlines. Columns are currently separated by:
-ForumSpecialBBCode.tableSeparator=Separate by:
+ForumSpecialBBCode.table=Insert tags for table. Rows are separated by newlines, columns are separated by "%s".
+ForumSpecialBBCode.tableSeparator=Separate by "%s"
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
