Renamed two modules: FoxtrickLinksYouthMatchlist and FoxtrickLinksYouthPlayerList and some minor description changes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5219 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -63,20 +63,19 @@ foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Personal markers
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
-foxtrick.ForumYouthIcons.user_id.desc=Adds Icon for UserID
-foxtrick.ForumYouthIcons.kit_id.desc=Adds Icon for KitID
-foxtrick.ForumYouthIcons.article_id.desc=Adds Icon for ArticleID
-foxtrick.ForumYouthIcons.line_br.desc=Adds Icon for line break
-foxtrick.ForumYouthIcons.clock.desc=Adds Icon for actual time
-foxtrick.ForumYouthIcons.spoiler.desc=Adds Icon for spoiler tags
-foxtrick.ForumYouthIcons.youth_player.desc=Adds Icon for YouthPlayerID
-foxtrick.ForumYouthIcons.youth_team.desc=Adds Icon for YouthTeamID
-foxtrick.ForumYouthIcons.youth_match.desc=Adds Icon for YouthMatchID
-foxtrick.ForumYouthIcons.youth_series.desc=Adds Icon for YouthSeriesID
-foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textboxes for better writing
-foxtrick.ForumYouthIcons.pre.desc=Adds Icon for Forum 'pre' format
-foxtrick.ForumYouthIcons.table.desc=Adds Icon for Forum 'table' format
-foxtrick.ShowMessageButton.desc=Adds a 'Send Message' button to the manager page
+foxtrick.ForumYouthIcons.user_id.desc=Adds icon for UserID
+foxtrick.ForumYouthIcons.kit_id.desc=Adds icon for KitID
+foxtrick.ForumYouthIcons.article_id.desc=Adds icon for ArticleID
+foxtrick.ForumYouthIcons.line_br.desc=Adds icon for line break
+foxtrick.ForumYouthIcons.clock.desc=Adds icon for actual time
+foxtrick.ForumYouthIcons.spoiler.desc=Adds icon for spoiler tags
+foxtrick.ForumYouthIcons.youth_player.desc=Adds icon for YouthPlayerID
+foxtrick.ForumYouthIcons.youth_team.desc=Adds icon for YouthTeamID
+foxtrick.ForumYouthIcons.youth_match.desc=Adds icon for YouthMatchID
+foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
+foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
+foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
+foxtrick.ForumYouthIcons.table.desc=Adds icon for table
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
@@ -93,9 +92,9 @@ foxtrick.LinksChallenges.desc=Adds some external links to the challenges page
 foxtrick.LinksEconomy.desc=Adds some external links to the economy page
 foxtrick.LinksYouthOverview.desc=Adds some external links to the youth overview page
 foxtrick.LinksYouthTraining.desc=Adds some external links to the youth training page
-foxtrick.LinksYouthPlayerDetail.desc=Adds some external links to the youthplayer details page
-foxtrick.LinksYouthPlayerlist.desc=Adds some external links to the youthplayers page
-foxtrick.LinksYouthMatchlist.desc=Adds some external links to the Youth Matches page
+foxtrick.LinksYouthPlayerDetail.desc=Adds some external links to the youth player details page
+foxtrick.LinksYouthPlayerList.desc=Adds some external links to the youth players page
+foxtrick.LinksYouthMatchList.desc=Adds some external links to the youth matches page
 foxtrick.LinksArena.desc=Adds some external links to the arena page
 foxtrick.LinksCoach.desc=Adds some external links to the new-coach page
 foxtrick.LinksPlayerDetail.desc=Adds some external links to the players detail page
@@ -226,13 +225,13 @@ foxtrick.TickerColoring.Hover.desc=Hover custom color
 foxtrick.ExtraShortcuts.desc=Adds shortcuts to the main shortcuts
 foxtrick.ExtraShortcuts.AddLeft.desc=Check to add icon left, uncheck to add them right
 foxtrick.ExtraShortcuts.AddSpace.desc=Increase space for shortcut icons
-foxtrick.ExtraShortcuts.Supporterstats.desc=Linkicon to supporter stats
-foxtrick.ExtraShortcuts.Transfers.desc=Linkicon to transfers page of the own team
-foxtrick.ExtraShortcuts.Prefs.desc=Linkicon to preferences page
-foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Linkicon to FoxTrick preferences page
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Linkicon to Hattrick Radio (Belgium/Netherlands) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Linkicon to Hattrick Radio (Belgium/Netherlands) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Linkicon to Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.Supporterstats.desc=Link to supporter stats
+foxtrick.ExtraShortcuts.Transfers.desc=Link to transfers page of the own team
+foxtrick.ExtraShortcuts.Prefs.desc=Link to preferences page
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link to FoxTrick preferences page
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link to Hattrick Radio (Belgium/Netherlands) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link to Hattrick Radio (Belgium/Netherlands) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link to Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
@@ -651,7 +650,7 @@ foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
 foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
 foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 
-foxtrick.onpagepreferences=FoxTrick OnPagePrefs
+foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to:
 NewOrChangedModules=Following modules are new or have changed since
