empty table tweak. table tag desc tweak. dump removed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5221 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -464,7 +464,7 @@ ForumSpecialBBCode.article=Add articleID
 ForumSpecialBBCode.clock=Add actual time
 ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
-ForumSpecialBBCode.table=Insert tags for table. Rows are separated by newlines, columns are separated by "%s".
+ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
 ForumSpecialBBCode.tableSeparator=Separate by "%s"
 
 #Transferlistfilters
