bullets??? are you crazy, we don't live in the 80ties anymore ;) made div for now instead also, i understand the reason for a dropdown, but the tooltip is covering it, so no way unfortunatelly
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5222 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -465,7 +465,7 @@ ForumSpecialBBCode.clock=Add actual time
 ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
 ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
-ForumSpecialBBCode.tableSeparator=Separate by "%s"
+ForumSpecialBBCode.tableSeparator=Convert "%s" to cells
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
