--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -449,6 +449,10 @@ sendmessage=Send
 #Forums
 foxtrick.CopyPostID=Copy PostID to clipboard
 foxtrick.CopyPosting=Copy Posting to clipboard
+style_ht-ml=HT-ML style
+style_wiki=wiki style
+style_raw=raw style
+
 
 ForumYouthIcons.label=Youth Links
 ForumYouthIcons.labelToolbar=Main Links
