--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -364,6 +364,7 @@ foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
 foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive. 
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
+foxtrick.ForumSortTable.desc=Makes all 'proper' forum tables sortable which have a header
 
 # -----------------------------------------------------------------------------
 
