foruchangeposts.js: some tweaks and error fixes of CopyPosting.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5249 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -355,9 +355,6 @@ foxtrick.RapidId.desc=A convenient input box on the top of page to view team, pl
 foxtrick.ReadHtPrefsFromHeader.desc=Automatically adjust settings for FoxTrick
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Setup language
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Setup Country, Date and Currency
-foxtrick.CopyPosting.CopyUnformatted.desc=Copy in unformatted style
-foxtrick.CopyPosting.CopyWikiStyle.desc=Copy in wiki.hattrick.org style
-foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Copy in HT-ML quoted style
 foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
 foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
 foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
@@ -449,11 +446,11 @@ sendmessage=Send
 
 #Forums
 foxtrick.CopyPostID=Copy PostID to clipboard
-foxtrick.CopyPosting=Copy Posting to clipboard
-style_ht-ml=HT-ML style
-style_wiki=wiki style
-style_raw=raw style
-
+CopyPosting=Copy Posting in %s style
+CopyPosting.abbr=Copy in %s style
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
 
 ForumYouthIcons.label=Youth Links
 ForumYouthIcons.labelToolbar=Main Links
