forumchangeposts.js: some detailed feedback after copying.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5260 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -708,8 +708,8 @@ foxtrick.tweaks.reportcopied=The training report/scout comment has been copied t
 foxtrick.tweaks.playersourcecopied=The HTML source code has been copied to the clipboard.
 foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the clipboard.
 foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
-foxtrick.tweaks.postidcopied=The post ID has been copied to the clipboard.
-foxtrick.tweaks.postingcopied=The posting has been copied to the clipboard.
+foxtrick.tweaks.postidcopied=Post ID [post=%s] has been copied to the clipboard.
+foxtrick.tweaks.postingcopied=Posting %s has been copied to the clipboard.
 
 #matches
 foxtrick.matches.attackdefensebars=Attack vs Defense
