CopyScoutReport message fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5266 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -703,6 +703,7 @@ foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
 foxtrick.tweaks.copyscoutreport=Copy scout comment to clipboard
+foxtrick.tweaks.scoutreportcopied=Scout comment has been copied to the clipboard.
 foxtrick.tweaks.copyplayerscource=Copy HTML source code to clipboard (for hattrick-youthclub.org)
 foxtrick.tweaks.reportcopied=The training report/scout comment has been copied to the clipboard.
 foxtrick.tweaks.playersourcecopied=The HTML source code has been copied to the clipboard.
