ftteamstats: sections optional
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5295 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -58,7 +58,7 @@ foxtrick.HTDateFormat.LocalSaison.desc=Display local season instead of global se
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday/default, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
 foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
-foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages. In the text boxes you can define an own style (HTML style attribute).
+foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Personal markers
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
@@ -148,6 +148,11 @@ foxtrick.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager p
 foxtrick.ManagerButtons.LargeSendMail.desc=Open the large mailbox instead of the small one
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
 foxtrick.FTTeamStats.desc=Compiles an overview of a team's players.
+foxtrick.FTTeamStats.General.desc=General information (TSI/age)
+foxtrick.FTTeamStats.Speciality.desc=Speciality
+foxtrick.FTTeamStats.Personality.desc=Personality
+foxtrick.FTTeamStats.Status.desc=Status (cards/injures)
+foxtrick.FTTeamStats.Current_league.desc=Current League
 foxtrick.ExtraPlayerInfo.desc=Show extra information of players on players page.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current coaches.
 foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
@@ -340,8 +345,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on 
 foxtrick.MatchTables.desc=Removes white space on match tables on simple design
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
-foxtrick.htmsStatistics.desc=Adds statistics on score result on matches.
-foxtrick.HighlightBotTeams.desc=Highlights 'bot' and ownerless teams on the series page
+foxtrick.HighlightBotTeams.desc=Highlights 'bot' and ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
 foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in forum to make them usable. Also adds whitespace for nested i/b/u in pre tags (FormatPostingText module)"
