note placement tweak + copyposting: added copy last style
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5315 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -455,6 +455,7 @@ CopyPosting.abbr=Copy in %s style
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
 CopyPosting.style.raw=raw
+CopyPosting.style.last=last
 
 ForumYouthIcons.label=Youth Links
 ForumYouthIcons.labelToolbar=Main Links
