--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -473,6 +473,7 @@ ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
 ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
 ForumSpecialBBCode.tableSeparator=Convert "%s" to cells
+ForumSpecialBBCode.enterSeparator=Enter a custom separator
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
