--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -701,9 +701,9 @@ foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
 foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 HatStatsDetailed=HatStats (detailed)
 HatStatsTotalOnly=HatStats (total only)
-foxtrick.tweaks.copyratings=Copy ratings to the clipboard (in HT-ML)
-foxtrick.tweaks.copyratings.home=Copy home team ratings to the clipboard (in HT-ML)
-foxtrick.tweaks.copyratings.away=Copy away team ratings to the clipboard (in HT-ML)
+foxtrick.tweaks.copyratings.both=Copy ratings(in HT-ML)
+foxtrick.tweaks.copyratings.home=Copy home team ratings(in HT-ML)
+foxtrick.tweaks.copyratings.away=Copy away team ratings(in HT-ML)
 foxtrick.tweaks.ratingscopied=The ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
