foxtrick.properties: put back description of module htmsStatistics.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5327 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -345,6 +345,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on 
 foxtrick.MatchTables.desc=Removes white space on match tables on simple design
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
+foxtrick.htmsStatistics.desc=Adds statistics on score result on matches.
 foxtrick.HighlightBotTeams.desc=Highlights 'bot' and ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
