--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links whe
 foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
-foxtrick.StaffMarker.own.desc=Personal markers
+foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.user_id.desc=Adds icon for UserID
