--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -678,7 +678,7 @@ FoxtrickMyHtHelpPage=FoxTrick Help forum (English, German, Spanish, Italian):
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=13254684
 
 StyleTutorial.title=Styling FoxTrick
-StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, and you can modify it to satisfy your need.\nAfter saving the file, you can use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
+StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, and you can modify it to satisfy your need.\nIf the link doens't open, copy and paste it to the adressbar. After saving the file, you can use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
 
 # changes categories
 new=New
