copyPlayerAd.js: sorted skills optionalized, and use table for arrangement.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5333 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -174,6 +174,7 @@ foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page. Clicking on the header switches between list and select box
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Also replaces the list of players by a selectbox on youth players page
 foxtrick.CopyPlayerAd.desc=A button on player's page for copying his details (in HT-ML).
+foxtrick.CopyPlayerAd.Sorted.desc=Sort the skills in descending order.
 foxtrick.CustomMedals.desc=Replaces the new Hattrick medals with the old style ones
 foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
