--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -147,12 +147,12 @@ foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team p
 foxtrick.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager page and team page
 foxtrick.ManagerButtons.LargeSendMail.desc=Open the large mailbox instead of the small one
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
-foxtrick.FTTeamStats.desc=Compiles an overview of a team's players.
-foxtrick.FTTeamStats.General.desc=General information (TSI/age)
-foxtrick.FTTeamStats.Speciality.desc=Speciality
-foxtrick.FTTeamStats.Personality.desc=Personality
-foxtrick.FTTeamStats.Status.desc=Status (cards/injures)
-foxtrick.FTTeamStats.Current_league.desc=Current League
+foxtrick.TeamStats.desc=Compiles an overview of a team's players.
+foxtrick.TeamStats.General.desc=General information (TSI/age)
+foxtrick.TeamStats.Speciality.desc=Speciality
+foxtrick.TeamStats.Personality.desc=Personality
+foxtrick.TeamStats.Status.desc=Status (cards/injures)
+foxtrick.TeamStats.Current_league.desc=Current League
 foxtrick.ExtraPlayerInfo.desc=Show extra information of players on players page.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current coaches.
 foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
@@ -389,15 +389,15 @@ foxtrick.youthpromotedays.prom_t=Player can be promoted today!
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Team overview
-foxtrick.FTTeamStats.PlayerNotToOld.label=Players < 19 yr
-foxtrick.FTTeamStats.PlayerToOld.label=Players >= 19 yr
-foxtrick.FTTeamStats.Cards.label=Cards
-foxtrick.FTTeamStats.Injured.label=Injured
-foxtrick.FTTeamStats.TransferListed.label=Transfer-listed
-foxtrick.FTTeamStats.Pictures.label=Faces
-foxtrick.FTTeamStats.PlayedLatest.label=Played in last match
-foxtrick.FTTeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.label=Team overview
+foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 yr
+foxtrick.TeamStats.PlayerToOld.label=Players >= 19 yr
+foxtrick.TeamStats.Cards.label=Cards
+foxtrick.TeamStats.Injured.label=Injured
+foxtrick.TeamStats.TransferListed.label=Transfer-listed
+foxtrick.TeamStats.Pictures.label=Faces
+foxtrick.TeamStats.PlayedLatest.label=Played in last match
+foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
 
 #season stats
 #note to translators. use abreviations of league table where applicable
