Some more description fixes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5336 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -703,17 +703,17 @@ foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
 foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 HatStatsDetailed=HatStats (detailed)
 HatStatsTotalOnly=HatStats (total only)
-foxtrick.tweaks.copyratings.both=Copy ratings(in HT-ML)
-foxtrick.tweaks.copyratings.home=Copy home team ratings(in HT-ML)
-foxtrick.tweaks.copyratings.away=Copy away team ratings(in HT-ML)
+foxtrick.tweaks.copyratings.both=Copy ratings (in HT-ML)
+foxtrick.tweaks.copyratings.home=Copy home team ratings (in HT-ML)
+foxtrick.tweaks.copyratings.away=Copy away team ratings (in HT-ML)
 foxtrick.tweaks.ratingscopied=The ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
 foxtrick.tweaks.copyscoutreport=Copy scout comment to clipboard
-foxtrick.tweaks.scoutreportcopied=Scout comment has been copied to the clipboard.
+foxtrick.tweaks.scoutreportcopied=The scout comment has been copied to the clipboard.
 foxtrick.tweaks.copyplayerscource=Copy HTML source code to clipboard (for hattrick-youthclub.org)
-foxtrick.tweaks.reportcopied=The training report/scout comment has been copied to the clipboard.
+foxtrick.tweaks.trainingreportcopied=The training report has been copied to the clipboard.
 foxtrick.tweaks.playersourcecopied=The HTML source code has been copied to the clipboard.
 foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the clipboard.
 foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
