table custom tag hints
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5339 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Adds icon for YouthMatchID
 foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
-foxtrick.ForumYouthIcons.table.desc=Adds icon for table
+foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.). 
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
