--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -141,7 +141,9 @@ foxtrick.ForumNextAndPrevious.desc=Remove the 'Next' and 'Previous' buttons on f
 foxtrick.ForumLastPost.desc=Jump to last posting instead of jumping to the first posting of read threads
 foxtrick.ForumLastPost.lastpage.desc=Jump to last page, not last posting
 foxtrick.MatchPlayerColouring.desc=Colors the players depending on their team in the match report. When using links on playerdetails page, it highlights this player only
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player coloring
 foxtrick.MatchReportFormat.desc=Presentation of the report line by line according to match events.
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
 foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to team page on forum links
 foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team page
 foxtrick.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager page and team page
