added some hint to master lang file
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5351 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -2,6 +2,13 @@
 # utf-8 encoded ENGLISH MASTER 
 # By Developers
 
+# Hints:
+# translate the right side of the = sign. 
+# don't use " in your translations.
+# the left side are idenitifiers for internal foxtrick use. leave them unchanged. 
+# sentences starting with # are comments. leave them unchanged
+
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.FoxtrickLineupShortcut.desc=Add a shortcut to lineup on player's match history
