Fixed type "qoute" to "quote".
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5369 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -70,7 +70,7 @@ foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
-foxtrick.ForumYouthIcons.q.desc=Adds icon for qoute tags if missing
+foxtrick.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
 foxtrick.ForumYouthIcons.user_id.desc=Adds icon for UserID
 foxtrick.ForumYouthIcons.kit_id.desc=Adds icon for KitID
 foxtrick.ForumYouthIcons.article_id.desc=Adds icon for ArticleID
@@ -476,7 +476,7 @@ ForumYouthIcons.youthteamid=Insert youth team tag.
 ForumYouthIcons.youthmatchid=Insert youth match tag.
 ForumYouthIcons.youthseries=Insert youth series tag.
 #special bbcode, not really youth icons
-ForumSpecialBBCode.q=Add qoute
+ForumSpecialBBCode.q=Add quote
 ForumSpecialBBCode.br=Add line break
 ForumSpecialBBCode.user=Add userID
 ForumSpecialBBCode.kit=Add kitID
