foxtrick.properties: moved some ingame strings to right section
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5374 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -168,17 +168,6 @@ foxtrick.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current c
 foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
 foxtrick.PlayerFilters.desc=Add a select box for filtering players on players page.
 foxtrick.HistoryStats.desc=Compiles an overview of team's history.
-foxtrick.HistoryStats.season=Season
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Cup round
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Series
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=Series final position
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=History stats
-foxtrick.HistoryStats.cupwinner=Cup winner
-foxtrick.HistoryStats.cupwinner.short=CW
 foxtrick.LargeFlags.desc=Enlarge flags on player page if faces are shown (may crash on GNU/Linux)
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page. Clicking on the header switches between list and select box
@@ -389,6 +378,19 @@ foxtrick.ExtraShortcuts.statistics=Statistics
 foxtrick.ExtraShortcuts.transfers=Transfers
 foxtrick.ExtraShortcuts.prefs=Preferences
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick preferences
+
+#HistoryStats
+foxtrick.HistoryStats.season=Season
+foxtrick.HistoryStats.season.short=S
+foxtrick.HistoryStats.cup=Cup round
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Series
+foxtrick.HistoryStats.league.short=Ser.
+foxtrick.HistoryStats.pos=Series final position
+foxtrick.HistoryStats.pos.short=P
+foxtrick.HistoryStats.label=History stats
+foxtrick.HistoryStats.cupwinner=Cup winner
+foxtrick.HistoryStats.cupwinner.short=CW
 
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=Player can be promoted earliest in
