prefs: reset (editfield) button renamed to example. with (most) colors gone there are all only example. thus it's a better description
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5384 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -914,7 +914,7 @@ foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 
 foxtrick.prefs.buttonSave=Save
 foxtrick.prefs.buttonCancel=Cancel
-foxtrick.prefs.buttonReset=Reset
+foxtrick.prefs.buttonExample=Example
 foxtrick.prefs.buttonCustomize=Customize
 foxtrick.prefs.buttonCleanupBranch=Restore default
 foxtrick.prefs.buttonDisableAll=Disable all
