foxtrick.properties: modification of description about language change.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5410 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,7 +333,7 @@ foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
-foxtrick.ReadHtPrefs.desc=Automatically change language whenever you change your language in HT's preferences
+foxtrick.ReadHtPrefs.desc=Automatically detect language
 foxtrick.ReadHtCountryCurrencyDateFormat.desc=Automatically detect country, currency and date format
 foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Last detected values:
 foxtrick.OnPagePrefs.desc=Show a box in the sidebar for preferences of modules running on the current page.
@@ -675,7 +675,7 @@ foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 
 foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
-HTLanguageChanged=You have set in FoxTrick's main preferences that FoxTrick's language is automatically adapted when you choose another language in HT. Your FoxTrick language locale is now set to:
+HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
 NewOrChangedModules=Following modules are new or have changed since
 Screenshot=Commented screenshot of module's features
 PreferenceScreenshot=Commented screenshot of resp. FoxTrick's preferences
