forumshowprefbutton.js: moved pref link as text to bottom-left corner.
If the default position is used, it may block pagers; while the old
behaviour is inconsistent with the default position and requires manual
changes to follow latest modifications.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5479 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -88,7 +88,7 @@ foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
-foxtrick.ShowForumPrefButton.desc=Shows shortcut to forum preferences on all forum pages
+foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
 foxtrick.AlltidFlags.desc=Adds Alltid flags and links of users in a message header
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's series page, if (hidden) manager avatar is on
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's series page
@@ -445,6 +445,8 @@ foxtrick.GoToPostBox.label=Go!
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
 leave_conf_button=Leave forum
+
+forum.preferences=Forum Preferences
 
 # ForumTemplates
 make_template_from_post=Make template from post
