preferences.xhtml: filled about pane.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5513 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -907,6 +907,12 @@ foxtrick.prefs.buttonSavePrefs=Save
 foxtrick.prefs.buttonLoadPrefs=Load
 foxtrick.prefs.activeCurrencyConverter=Enable currency converter
 
+about.headDevelopers=Head Developers
+about.projectOwners=Project Owners
+about.developers=Developers
+about.translators=Translators
+about.designers=Designers
+
 delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
