Localize "preference saved" message.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5518 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -896,6 +896,7 @@ foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences may be ove
 foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
+foxtrick.prefs.saved=Preferences saved!
 
 foxtrick.prefs.buttonSave=Save
 foxtrick.prefs.buttonCancel=Cancel
