'Remove UOL toollbar' option in FixCSSProblems module for Brasilian users + activating FoxTrick on domain(hattrick.uol.com.br)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5534 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -195,6 +195,7 @@ foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Fixes the problem of displace
 foxtrick.FixcssProblems.RTL_Fixes.desc=Fixes some HT error for right-to-left writing languages
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Adds fixed scrollbar to forum. Less flickering than HT option
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Increase font size for HT 'small font' format.
+foxtrick.FixcssProblems.BrasilToollbarFix.desc=Remove UOL toollbar (for Brasilian users)
 foxtrick.SimplePresentation.desc=Additional presentation options
 foxtrick.SimplePresentation.League_Table.desc=Adds vertical lines to league table for easier reading
 foxtrick.SimplePresentation.Guestbook.desc=Increases readability in the guestbook (indent message with gray background)
